--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "environment"]
 	path = environment
-	url = https://github.com/simplyvikram/eai_environment_submodule.git
+	url = url-to-updated-on-the-fly-via-repo-build
