Updating testing-submodules.yml - 3

--- a/.github/workflows/testing-submodules.yml
+++ b/.github/workflows/testing-submodules.yml
@@ -33,9 +33,9 @@ jobs:
       - name: testing importing submodules
         run: |
           echo "Testing submodules"
-          printf "-------ls before adding gitsubmodule----"; ls ; printf "\n"
+          echo "-------ls before adding gitsubmodule----"; ls ; printf "\n"
           git submodule add --force https://github.com/simplyvikram/eai_environment_submodule.git environment
-          printf "-------ls after adding gitsubmodule----"; ls ; printf "\n"
+          echo "-------ls after adding gitsubmodule----"; ls ; printf "\n"
           echo "-----contents of .git/config ------ start"
           cat ./.git/config
           echo "-----contents of .git/config ------ end"
