Updating testing-submodules.yml - 5

--- a/.github/workflows/testing-submodules.yml
+++ b/.github/workflows/testing-submodules.yml
@@ -45,6 +45,6 @@ jobs:
           git checkout main
           git pull
           echo "------Checking git status"
-          echo "git log -5"
+          git log -n 5
 
 
